scripts/nullaway/wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8.txt
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_Block.java:85: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.miniDB = miniDB;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB.java:41: error: [NullAway] initializer method does not guarantee @NonNull field catalog (line 30) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public MiniDB(@org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull String dbName) {
           ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/BPlusTree.java:52: error: [NullAway] initializer method does not guarantee @NonNull fields indexedFileName (line 18), indexedFieldName (line 18) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public BPlusTree(@org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull MiniDB db) {
           ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/BPlusTree.java:206: error: [NullAway] dereferenced expression rightNode is @Nullable
                if (nextValueToInsert >= rightNode.getMinValue()) {
                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/BPlusTreeHeadBlock.java:41: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.bpt = null;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Sample1.java:24: error: [NullAway] dereferenced expression bpt is @Nullable
                bpt.insertRecord(value, blockID);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Sample1.java:28: error: [NullAway] dereferenced expression bpt is @Nullable
            BPlusTreeLeafNode leaf = (BPlusTreeLeafNode) bpt.getRootNode();
                                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Sample3.java:26: error: [NullAway] dereferenced expression bpt is @Nullable
                bpt.insertRecord(value, blockID);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Sample3.java:33: error: [NullAway] dereferenced expression bpt is @Nullable
            System.out.println(bpt.allTreeValuesToString());
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Ex2.java:13: error: [NullAway] dereferenced expression bpt2 is @Nullable
            bpt2.insertRecord(1, 2);
                ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_Record.java:19: error: [NullAway] dereferenced expression that is @Nullable
        int ret = this.value.compareTo(that.value);
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Sample2.java:25: error: [NullAway] dereferenced expression bpt is @Nullable
                bpt.insertRecord(value, blockID);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Sample2.java:31: error: [NullAway] dereferenced expression bpt is @Nullable
            System.out.println(bpt.allTreeValuesToString());
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Sample4.java:25: error: [NullAway] dereferenced expression bpt is @Nullable
                bpt.insertRecord(value, blockID);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Sample4.java:32: error: [NullAway] dereferenced expression bpt is @Nullable
            System.out.println(bpt.allTreeValuesToString());
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Sample4.java:87: error: [NullAway] dereferenced expression bpt is @Nullable
                bpt.printAllRecords();
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_example.java:54: error: [NullAway] dereferenced expression bpt is @Nullable
            s = "B+Tree info\n " + bpt.toString();
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_grade.java:45: error: [NullAway] dereferenced expression bpt is @Nullable
            BPlusTreeLeafNode root = (BPlusTreeLeafNode) bpt.getRootNode();
                                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_grade.java:69: error: [NullAway] dereferenced expression bpt50 is @Nullable
        BPlusTreeLeafNode root50 = (BPlusTreeLeafNode) bpt50.getRootNode();
                                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_grade.java:92: error: [NullAway] dereferenced expression bpt70 is @Nullable
        BPlusTreeLeafNode root70 = (BPlusTreeLeafNode) bpt70.getRootNode();
                                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_grade.java:122: error: [NullAway] dereferenced expression bpt is @Nullable
        BPlusTreeLeafNode root = (BPlusTreeLeafNode) bpt.getRootNode();
                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_grade.java:145: error: [NullAway] dereferenced expression bpt is @Nullable
        BPlusTreeLeafNode leaf = (BPlusTreeLeafNode) bpt.getRootNode();
                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_grade.java:237: error: [NullAway] dereferenced expression bpt is @Nullable
            bpt.insertRecord(value, blockID);
               ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_grade.java:249: error: [NullAway] dereferenced expression bpt is @Nullable
        bpt.getAll(vValues, vBlkIDs);
           ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_grade.java:320: error: [NullAway] dereferenced expression bpt is @Nullable
            bpt.insertRecord(value, blkID);
               ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_grade.java:330: error: [NullAway] dereferenced expression bpt is @Nullable
        blkID = bpt.lookup(-5000);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_grade.java:421: error: [NullAway] dereferenced expression bpt is @Nullable
            bpt.insertRecord(value, blockID);
               ^
    (see http://t.uber.com/nullaway )
../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_grade.java:442: error: [NullAway] dereferenced expression bpt is @Nullable
        BPlusTreeNode[] nodes = bpt.getPathForValue(0);
                                   ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_Record.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
28 errors
